--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
     "sass": "^1.56.1",
     "scss": "^0.2.4",
     "web-vitals": "^2.1.4"
