--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "redux-saga": "^1.2.2",
     "reselect": "^4.1.7",
     "sass": "^1.56.1",
     "scss": "^0.2.4",
