add styled components

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "reselect": "^4.1.7",
     "sass": "^1.56.1",
     "scss": "^0.2.4",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
